Se mejora la redacción del README.md

--- a/app/globals.css
+++ b/app/globals.css
@@ -88,7 +88,7 @@
   }
 
   .max-container {
-    @apply mx-auto max-w-[1440px];
+    @apply mx-auto max-w-[1920px];
   }
 
   .padding-container {
@@ -96,7 +96,7 @@
   }
 
   .max_padd_container {
-    @apply mx-auto max-w-[1440px] px-6 lg:px-20 3xl:px-0;
+    @apply mx-auto max-w-[1920px] px-6 lg:px-20 3xl:px-44 4xl:px-0;
   }
 
   .flexCenter {
